pieter_temmerman/session-01/exercise-01/mariadb-service.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: mariadb-svc
  namespace: exercise-01
spec:
  type: ClusterIP
  ports:
    - name: mariadb-port
      port: 3306
      targetPort: mariadb

  selector:
    app: mariadb
