pieter_temmerman/session-01/exercise-01/wordpress-service.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: wordpress-svc
  namespace: exercise-01
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
    - name: https
      port: 443

  selector:
      tier: frontend
      app: wordpress
